--- a/config/org/retinanet50.yaml
+++ b/config/org/retinanet50.yaml
@@ -3,7 +3,7 @@ dataset:
     root: &data_dir !join ['./resource/data/', *dataset_name, '/']
     data:
         annot_prefix: &annot_prefix !join [*data_dir, 'annotations/instances_']
-        img_prefix: &img_prefix !join [*data_dir, 'images/]
+        img_prefix: &img_prefix !join [*data_dir, 'images/']
         train:
             annotation: !join [*annot_prefix, 'train2017.json']
             img_dir: !join [*img_prefix, 'train2017/']
