--- a/config/mimic/retinanet50_mimic.yaml
+++ b/config/mimic/retinanet50_mimic.yaml
@@ -4,8 +4,8 @@ dataset:
     data:
         annot_prefix: &annot_prefix !join [*data_dir, 'annotations/instances_']
         img_prefix: &img_prefix !join [*data_dir, 'images/']
-            train:
-                annotation: !join [*annot_prefix, 'train2017.json']
+        train:
+            annotation: !join [*annot_prefix, 'train2017.json']
             img_dir: !join [*img_prefix, 'train2017/']
         val:
             annotation: !join [*annot_prefix, 'val2017.json']
@@ -14,7 +14,7 @@ dataset:
 input_shape: [3, 640, 640]
 
 teacher_model:
-    config: './config/retinanet50.yaml'
+    config: './config/pretrained_retinanet50.yaml'
     extract_designed_module: False
     start_idx: 0
     end_idx: 11 # 11, 17, 20 for vers. 1, 2, 3
