modified log output file path

--- a/config/mimic/retinanet50_mimic.yaml
+++ b/config/mimic/retinanet50_mimic.yaml
@@ -42,6 +42,7 @@ train:
         type: 'MSELoss'
         params:
             reduction: 'sum'
+    log: !join ['./log/mimic/', *mimic_experiment, '.txt']
 
 test:
     batch_size: 1
