--- a/config/org/yolov3.yaml
+++ b/config/org/yolov3.yaml
@@ -28,8 +28,8 @@ model:
     experiment: &experiment !join [*dataset_name, '-', *model_type]
     ckpt: !join ['./resource/ckpt/', *experiment, '.pt']
     params:
-        img_size: *img_size,
-        conf_threshold: 0.7,
+        img_size: *img_size
+        conf_threshold: 0.7
         nms_threshold: 0.45
 
 train:
