--- a/config/org/fasterrcnn_resnet50_fpn.yaml
+++ b/config/org/fasterrcnn_resnet50_fpn.yaml
@@ -1,6 +1,6 @@
 dataset:
     name: &dataset_name 'coco2017'
-    root: &data_dir !join ['./resource/data/', *dataset_name, '/']
+    root: !join ['./resource/data/', *dataset_name, '/']
     num_workers: 4
     aspect_ratio_group_factor: 0
     splits:
@@ -20,9 +20,9 @@ model:
         pretrained: True
 
 train:
-    epoch:
+    num_epochs: 13
     batch_size: 2
-    num_logs: 50
+    log_freq: 50
     optimizer:
         type: 'SGD'
         params:
