--- a/config/org/fasterrcnn_resnet50_fpn.yaml
+++ b/config/org/fasterrcnn_resnet50_fpn.yaml
@@ -16,6 +16,7 @@ model:
     experiment: &experiment !join [*dataset_name, '-', *model_type]
     ckpt: !join ['./resource/ckpt/', *experiment, '.pt']
     params:
+        num_classes: 91
         pretrained: True
 
 train:
