--- a/config/org/faster_rcnn.yaml
+++ b/config/org/faster_rcnn.yaml
@@ -12,14 +12,14 @@ dataset:
 input_shape: [3, 300, 400]
 
 model:
-    type: &model_type 'faster_rcnn'
-    experiment: &experiment !join [*dataset_name, '-', *model_type]
-    ckpt: !join ['./resource/ckpt/', *experiment, '.pt']
+    name: &model_name 'faster_rcnn'
     params:
-        backbone_name: 'resnet50'
+        backbone_name: &backbone_name 'resnet50'
         backbone_pretrained: True
         num_classes: 91
         pretrained: True
+    experiment: &experiment !join [*dataset_name, '-', *model_name, '_backbone-', *backbone_name]
+    ckpt: !join ['./resource/ckpt/', *experiment, '.pt']
 
 train:
     num_epochs: 13
