--- a/config/org/mask_rcnn.yaml
+++ b/config/org/mask_rcnn.yaml
@@ -9,15 +9,17 @@ dataset:
         val: 'val'
         test: 'val'
 
-input_shape: [3, 640, 640]
+input_shape: [3, 300, 400]
 
 model:
-    type: &model_type 'fasterrcnn_resnet50_fpn'
-    experiment: &experiment !join [*dataset_name, '-', *model_type]
-    ckpt: !join ['./resource/ckpt/', *experiment, '.pt']
+    name: &model_name 'mask_rcnn'
     params:
+        backbone_name: &backbone_name 'resnet50'
+        backbone_pretrained: True
         num_classes: 91
         pretrained: True
+    experiment: &experiment !join [*dataset_name, '-', *model_name, '_backbone-', *backbone_name]
+    ckpt: !join ['./resource/ckpt/', *experiment, '.pt']
 
 train:
     num_epochs: 13
