--- a/config/mimic/faster_rcnn-faster_rcnn.yaml
+++ b/config/mimic/faster_rcnn-faster_rcnn.yaml
@@ -40,9 +40,31 @@ train:
             momentum: 0.9
             weight_decay: 0.0001
     criterion:
-        type: 'MSELoss'
+        type: 'hkd4rcnn'
         params:
-            reduction: 'sum'
+            org_loss_factor: 1.0
+        terms:
+            fpn:
+                ts_modules: ['backbone.body.fpn', 'backbone.body.fpn']
+                criterion:
+                    type: 'MSELoss'
+                    params:
+                        reduction: 'mean'
+                factor: 0.5
+            roi_align:
+                ts_modules: ['roi_heads.box_roi_pool', 'roi_heads.box_roi_pool']
+                criterion:
+                    type: 'MSELoss'
+                    params:
+                        reduction: 'mean'
+                factor: 30.0
+            logit:
+                ts_modules: ['roi_heads.box_predictor', 'roi_heads.box_predictor']
+                criterion:
+                    type: 'MSELoss'
+                    params:
+                        reduction: 'sum'
+                factor: 30.0
     scheduler:
         type: 'MultiStepLR'
         params:
