--- a/config/org/keypoint_rcnn.yaml
+++ b/config/org/keypoint_rcnn.yaml
@@ -20,7 +20,7 @@ model:
         num_keypoints: 17
         pretrained: True
     experiment: &experiment !join [*dataset_name, '-', *model_name, '_backbone-', *backbone_name]
-    ckpt: !join ['./resource/ckpt/', *experiment, '.pt']
+    ckpt: !join ['./resource/ckpt/org/', *experiment, '.pt']
 
 train:
     num_epochs: 13
