--- a/config/org/keypoint_rcnn.yaml
+++ b/config/org/keypoint_rcnn.yaml
@@ -19,7 +19,7 @@ model:
         num_classes: 2
         num_keypoints: 17
         pretrained: True
-    experiment: &experiment !join [*dataset_name, '-', *model_name, '_backbone-', *backbone_name]
+    experiment: &experiment !join [*dataset_name, '-', *model_name, '-backbone_', *backbone_name]
     ckpt: !join ['./resource/ckpt/org/', *experiment, '.pt']
 
 train:
