--- a/config/org/mask_rcnn.yaml
+++ b/config/org/mask_rcnn.yaml
@@ -18,7 +18,7 @@ model:
         backbone_pretrained: True
         num_classes: 91
         pretrained: True
-    experiment: &experiment !join [*dataset_name, '-', *model_name, '_backbone-', *backbone_name]
+    experiment: &experiment !join [*dataset_name, '-', *model_name, '-backbone_', *backbone_name]
     ckpt: !join ['./resource/ckpt/org/', *experiment, '.pt']
 
 train:
