--- a/config/org/keypoint_rcnn-backbone_resnet50.yaml
+++ b/config/org/keypoint_rcnn-backbone_resnet50.yaml
@@ -17,9 +17,11 @@ dataset:
 
 model:
     name: &model_name 'keypoint_rcnn'
+    backbone:
+        name: &backbone_name 'resnet50'
+        params:
+            pretrained: True
     params:
-        backbone_name: &backbone_name 'resnet50'
-        backbone_pretrained: True
         num_classes: 2
         num_keypoints: 17
         pretrained: True
