--- a/config/ext/keypoint_rcnn-backbone_ext_resnet50.yaml
+++ b/config/ext/keypoint_rcnn-backbone_ext_resnet50.yaml
@@ -17,16 +17,18 @@ dataset:
 
 model:
     name: &model_name 'keypoint_rcnn'
-    params:
-        backbone_name: &backbone_name 'resnet50'
-        backbone_pretrained: True
-        num_classes: 2
-        num_keypoints: 17
-        pretrained: True
+    backbone:
+        name: &backbone_name 'resnet50'
+        params:
+            pretrained: True
         ext_config:
             backbone_frozen: True
             threshold: 0.5
             ckpt: !join ['./resource/ckpt/ext/', *dataset_name, '-', *model_name, '-backbone_ext_', *backbone_name ,'.pt']
+    params:
+        num_classes: 2
+        num_keypoints: 17
+        pretrained: True
     experiment: &experiment !join [*dataset_name, '-', *model_name, '-backbone_', *backbone_name]
     ckpt: !join ['./resource/ckpt/org/', *experiment, '.pt']
 
