--- a/config/mimic/faster_rcnn-faster_rcnn.yaml
+++ b/config/mimic/faster_rcnn-faster_rcnn.yaml
@@ -18,21 +18,22 @@ dataset:
 teacher_model:
     name: &teacher_model_name 'faster_rcnn'
     backbone:
-        name: &teacher_backbone_name 'resnet101'
+        name: &teacher_backbone_name 'resnet50'
         params:
             pretrained: True
     params:
         num_classes: 91
-        pretrained: False
+        pretrained: True
     experiment: &teacher_experiment !join [*dataset_name, '-', *teacher_model_name, '-backbone_', *teacher_backbone_name]
     ckpt: !join ['./resource/ckpt/org/', *teacher_experiment, '.pt']
 
 student_model:
     name: &student_model_name 'faster_rcnn'
     backbone:
-        name: &student_backbone_name 'resnet50'
+        name: &student_backbone_name 'custom_resnet50'
         params:
             pretrained: True
+            layer1: 'Bottleneck4ResNet50'
     params:
         num_classes: 91
         pretrained: True
