added an option to freeze layers

--- a/config/ext/keypoint_rcnn-backbone_ext_resnet50.yaml
+++ b/config/ext/keypoint_rcnn-backbone_ext_resnet50.yaml
@@ -21,6 +21,7 @@ model:
         name: &backbone_name 'resnet50'
         params:
             pretrained: True
+            freeze_layers: True
         ext_config:
             backbone_frozen: True
             threshold: 0.5
