--- a/config/mimic/faster_rcnn-faster_rcnn.yaml
+++ b/config/mimic/faster_rcnn-faster_rcnn.yaml
@@ -21,6 +21,7 @@ teacher_model:
         name: &teacher_backbone_name 'resnet50'
         params:
             pretrained: True
+            freeze_layers: True
     params:
         num_classes: 91
         pretrained: True
