--- a/config/mimic/faster_rcnn-backbone_resnet50.yaml
+++ b/config/mimic/faster_rcnn-backbone_resnet50.yaml
@@ -33,12 +33,12 @@ student_model:
     backbone:
         name: &student_backbone_name 'custom_resnet50'
         params:
-            pretrained: False
+            pretrained: True
             freeze_layers: False
             layer1: 'Bottleneck4ResNet50'
     params:
         num_classes: 91
-        pretrained: False
+        pretrained: True
     experiment: &student_experiment !join [*dataset_name, '-', *student_model_name, '-backbone_', *student_backbone_name, '_from_', *teacher_model_name, '-backbone_', *teacher_backbone_name]
     ckpt: !join ['./resource/ckpt/mimic/', *student_experiment, '.pt']
 
