--- a/config/mimic/faster_rcnn-backbone_resnet50.yaml
+++ b/config/mimic/faster_rcnn-backbone_resnet50.yaml
@@ -42,7 +42,7 @@ student_model:
         num_classes: 91
         pretrained: True
     distill_backbone_only: True
-    frozen_modules: ['backbone.fpn', 'rpn', 'roi_heads']
+    frozen_modules: ['backbone.body.layer2, backbone.body.layer3, backbone.body.layer4, backbone.fpn', 'rpn', 'roi_heads']
     experiment: &student_experiment !join [*dataset_name, '-', *student_model_name, '-backbone_', *student_backbone_name, '_from_', *teacher_model_name, '-backbone_', *teacher_backbone_name]
     ckpt: !join ['./resource/ckpt/mimic/', *student_experiment, '.pt']
 
