--- a/config/org/keypoint_rcnn-backbone_resnet50.yaml
+++ b/config/org/keypoint_rcnn-backbone_resnet50.yaml
@@ -1,18 +1,20 @@
 dataset:
     name: &dataset_name 'coco2017'
-    task_name: 'coco_kp'
-    root: !join ['./resource/dataset/', *dataset_name, '/']
+    root: &root_dir !join ['./resource/dataset/', *dataset_name]
     num_workers: 4
     aspect_ratio_group_factor: 3
     splits:
         train:
-            name: 'train'
+            images: !join [*root_dir, '/train2017']
+            annotations: !join [*root_dir, '/annotations/person_keypoints_train2017.json']
             remove_non_annotated_imgs: True
         val:
-            name: 'val'
+            images: !join [*root_dir, '/val2017']
+            annotations: !join [*root_dir, '/annotations/person_keypoints_val2017.json']
             remove_non_annotated_imgs: False
         test:
-            name: 'val'
+            images: !join [*root_dir, '/val2017']
+            annotations: !join [*root_dir, '/annotations/person_keypoints_val2017.json']
             remove_non_annotated_imgs: False
 
 model:
