--- a/config/mimic/mask_rcnn-backbone_resnet50.yaml
+++ b/config/mimic/mask_rcnn-backbone_resnet50.yaml
@@ -21,7 +21,7 @@ dataset:
             jpeg_quality:
 
 teacher_model:
-    name: &teacher_model_name 'faster_rcnn'
+    name: &teacher_model_name 'mask_rcnn'
     backbone:
         name: &teacher_backbone_name 'resnet50'
         params:
@@ -34,7 +34,7 @@ teacher_model:
     ckpt: !join ['./resource/ckpt/org/', *teacher_experiment, '.pt']
 
 student_model:
-    name: &student_model_name 'faster_rcnn'
+    name: &student_model_name 'mask_rcnn'
     backbone:
         name: &student_backbone_name 'custom_resnet50'
         params:
