--- a/config/mimic/keypoint_rcnn-backbone_resnet50.yaml
+++ b/config/mimic/keypoint_rcnn-backbone_resnet50.yaml
@@ -44,6 +44,13 @@ student_model:
             layer1:
                 name: 'Bottleneck4LargeResNet'
                 bottleneck_channel: 3
+    bottleneck_transformer:
+        quantizer:
+            params:
+                num_bits: 8
+        dequantizer:
+            params:
+                num_bits: 8
     params:
         num_classes: 2
         num_keypoints: 17
@@ -66,34 +73,34 @@ train:
         params:
             org_loss_factor: 0.0
     terms:
-            layer1:
-                ts_modules: ['backbone.body.layer1', 'backbone.body.layer1']
-                criterion:
-                    type: 'MSELoss'
-                    params:
-                        reduction: 'sum'
-                factor: 1.0
-            layer2:
-                ts_modules: ['backbone.body.layer2', 'backbone.body.layer2']
-                criterion:
-                    type: 'MSELoss'
-                    params:
-                        reduction: 'sum'
-                factor: 1.0
-            layer3:
-                ts_modules: ['backbone.body.layer3', 'backbone.body.layer3']
-                criterion:
-                    type: 'MSELoss'
-                    params:
-                        reduction: 'sum'
-                factor: 1.0
-            layer4:
-                ts_modules: ['backbone.body.layer4', 'backbone.body.layer4']
-                criterion:
-                    type: 'MSELoss'
-                    params:
-                        reduction: 'sum'
-                factor: 1.0
+        layer1:
+            ts_modules: ['backbone.body.layer1', 'backbone.body.layer1']
+            criterion:
+                type: 'MSELoss'
+                params:
+                    reduction: 'sum'
+            factor: 1.0
+        layer2:
+            ts_modules: ['backbone.body.layer2', 'backbone.body.layer2']
+            criterion:
+                type: 'MSELoss'
+                params:
+                    reduction: 'sum'
+            factor: 1.0
+        layer3:
+            ts_modules: ['backbone.body.layer3', 'backbone.body.layer3']
+            criterion:
+                type: 'MSELoss'
+                params:
+                    reduction: 'sum'
+            factor: 1.0
+        layer4:
+            ts_modules: ['backbone.body.layer4', 'backbone.body.layer4']
+            criterion:
+                type: 'MSELoss'
+                params:
+                    reduction: 'sum'
+            factor: 1.0
     scheduler:
         type: 'MultiStepLR'
         params:
