order should be keptush

--- a/config/mimic/mask_rcnn-backbone_resnet50.yaml
+++ b/config/mimic/mask_rcnn-backbone_resnet50.yaml
@@ -44,12 +44,14 @@ student_model:
                 name: 'Bottleneck4LargeResNet'
                 bottleneck_channel: 3
     bottleneck_transformer:
-        quantizer:
-            params:
-                num_bits: 8
-        dequantizer:
-            params:
-                num_bits: 8
+        order: ['quantizer', 'dequantizer']
+        components:
+            quantizer:
+                params:
+                    num_bits: 8
+            dequantizer:
+                params:
+                    num_bits: 8
     params:
         num_classes: 91
         pretrained: True
