--- a/config/mimic/keypoint_rcnn-backbone_resnet50.yaml
+++ b/config/mimic/keypoint_rcnn-backbone_resnet50.yaml
@@ -45,12 +45,14 @@ student_model:
                 name: 'Bottleneck4LargeResNet'
                 bottleneck_channel: 3
     bottleneck_transformer:
-        quantizer:
-            params:
-                num_bits: 8
-        dequantizer:
-            params:
-                num_bits: 8
+        order: ['quantizer', 'dequantizer']
+        components:
+            quantizer:
+                params:
+                    num_bits: 8
+            dequantizer:
+                params:
+                    num_bits: 8
     params:
         num_classes: 2
         num_keypoints: 17
