--- a/config/ext/keypoint_rcnn-backbone_ext_resnet50.yaml
+++ b/config/ext/keypoint_rcnn-backbone_ext_resnet50.yaml
@@ -34,12 +34,21 @@ model:
             backbone_frozen: True
             threshold: 0.5
             ckpt: !join ['./resource/ckpt/ext/', *dataset_name, '-', *model_name, '-backbone_ext_', *backbone_name ,'.pt']
+    bottleneck_transformer:
+        order: ['quantizer', 'dequantizer']
+        components:
+            quantizer:
+                params:
+                    num_bits: 8
+            dequantizer:
+                params:
+                    num_bits: 8
     params:
         num_classes: 2
         num_keypoints: 17
         pretrained: True
-    experiment: &experiment !join [*dataset_name, '-', *model_name, '-backbone_', *backbone_name]
-    ckpt: !join ['./resource/ckpt/org/', *experiment, '.pt']
+    experiment: &experiment !join [*dataset_name, '-', *model_name, '-backbone_', *backbone_name, '_from_keypoint_rcnn-backbone_resnet50']
+    ckpt: !join ['./resource/ckpt/mimic/', *experiment, '.pt']
 
 train:
     num_epochs: 30
