--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-torch = "*"
-torchvision = "*"
+torch = "==1.3.1"
+torchvision = "==0.4.2"
+pillow = "<7"
 numpy = "*"
 matplotlib = "*"
 pyyaml = "*"
