specified pycocotools ver

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ pillow = "<7"
 numpy = "*"
 matplotlib = "*"
 pyyaml = "*"
-pycocotools = "*"
+pycocotools = "==2.0.1"
 cython = "*"
 scikit-learn = "*"
 pandas = "*"
