--- a/config/ext/keypoint_rcnn-backbone_ext_resnet50-b3ch.yaml
+++ b/config/ext/keypoint_rcnn-backbone_ext_resnet50-b3ch.yaml
@@ -29,11 +29,11 @@ model:
             freeze_layers: True
             layer1:
                 name: 'Bottleneck4LargeResNet'
-                bottleneck_channel: 3
+                bottleneck_channel: &bch 3
         ext_config:
             backbone_frozen: True
             threshold: 0.01
-            ckpt: !join ['./resource/ckpt/ext/', *dataset_name, '-', *model_name, '-backbone_ext_', *backbone_name ,'.pt']
+            ckpt: !join ['./resource/ckpt/ext/', *dataset_name, '-', *model_name, '-backbone_ext_', *backbone_name, '-b', *bch, 'ch.pt']
     bottleneck_transformer:
         order: ['quantizer', 'dequantizer']
         components:
@@ -47,8 +47,8 @@ model:
         num_classes: 2
         num_keypoints: 17
         pretrained: True
-    experiment: &experiment !join [*dataset_name, '-', *model_name, '-backbone_', *backbone_name, '_from_keypoint_rcnn-backbone_resnet50']
-    ckpt: !join ['./resource/ckpt/mimic/', *experiment, '.pt']
+    experiment: &experiment !join [*dataset_name, '-', *model_name, '-backbone_', *backbone_name, '_from_keypoint_rcnn-backbone_resnet50-b', *bch, 'ch']
+    ckpt: !join ['./resource/ckpt/ghnd/', *experiment, '.pt']
 
 train:
     num_epochs: 30
